# yarumotors

./: .mise.toml  Makefile  yarumotors.code-workspace
services/bot/: .env.example  .gitignore  eslint.config.ts  package.json  pnpm-lock.yaml  wrangler.jsonc
services/bot/src/: commands.ts  configuration.d.ts  index.ts  register.ts
services/bot/src/types/: configuration.d.ts
services/bot/src/utils/: consts.ts  discordChannel.ts  getGps.ts  gps.json  register.ts
services/core/: .env.example  .gitignore  main.py  pyproject.toml
services/core/app/: config.py  main.py
services/core/utils/: get_gps.py  notify_bot.py
