[project]
name = "core"
version = "0.0.1"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
]
[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"]
exclude = ["venv", "__pycache__"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache*", "yarumotors_bruno*"]