[project]
name = "core"
version = "0.0.1"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "boto3>=1.40.64",
  "dotenv>=0.9.9",
  "python-multipart>=0.0.20",
]
[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"]
exclude = ["venv", "__pycache__"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache*", "yarumotors_bruno*"]
